HCC-2/ feat: update current logic