@@ -8,12 +8,15 @@ import org.springframework.transaction.annotation.Transactional;
 import springboot.bookingservice.dto.BookingRequest;
 import springboot.bookingservice.dto.BookingResponse;
 import springboot.bookingservice.dto.GetBookingResponse;
+import springboot.bookingservice.mapper.DtoMapper;
 import springboot.bookingservice.model.Booking;
 import springboot.bookingservice.model.BookingStatus;
 import springboot.bookingservice.repository.BookingRepository;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -26,12 +29,13 @@ public class BookingService {
         this.bookingRepository = bookingRepository;
     }
 
+    /**
+     * Create a new booking.
+     */
     @Transactional
     public void createBooking(BookingRequest request) {
 
-        BookingStatus statusToSave = (request.getStatus() != null)
-                ? BookingStatus.valueOf(request.getStatus())
-                : BookingStatus.PENDING;
+        BookingStatus statusToSave = BookingStatus.PENDING;
 
         Booking booking = Booking.builder()
                 .userId(request.getUserId())
@@ -40,33 +44,90 @@ public class BookingService {
                 .additionalNotes(request.getAdditionalNotes())
                 .totalPrice(request.getTotalPrice())
                 .vehicleId(request.getVehicleId())
+                .serviceIds(request.getServiceIds())
+                .paymentMethod(request.getPaymentMethod())
+                .phoneNumber(request.getPhoneNumber())
                 .build();
 
         bookingRepository.save(booking);
-
-        log.info("Booking created: {}", booking);
+        log.info("Booking created with ID: {}", booking.getId());
     }
 
+    /**
+     * Get bookings by User ID (Enriched with names).
+     */
     public ResponseEntity<GetBookingResponse> getBookingsByUser(UUID userId) {
-
         List<Booking> entities = bookingRepository.findByUserId(userId);
 
+        if (entities == null || entities.isEmpty()) {
+            return ResponseEntity.ok(GetBookingResponse.builder()
+                    .bookings(Collections.emptyList())
+                    .build());
+        }
+
         List<BookingResponse> dtos = entities.stream()
-                .map(booking -> BookingResponse.builder()
-                        .id(booking.getId())
-                        .userId(booking.getUserId())
-                        .bookingDate(booking.getBookingDate())
-                        .status(booking.getStatus())
-                        .additionalNotes(booking.getAdditionalNotes())
-                        .totalPrice(booking.getTotalPrice())
-                        .vehicleId(booking.getVehicleId())
-                        .build())
-                .toList();
+                .map(this::enrichAndMap)
+                .collect(Collectors.toList());
 
-        GetBookingResponse response = GetBookingResponse.builder()
-                .bookings(dtos)
-                .build();
+        return ResponseEntity.ok(GetBookingResponse.builder().bookings(dtos).build());
+    }
 
-        return ResponseEntity.ok(response);
+    /**
+     * Get bookings by Status (Enriched with names).
+     */
+    public ResponseEntity<GetBookingResponse> getBookingsByStatus(String status) {
+        BookingStatus statusEnum;
+        try {
+            statusEnum = BookingStatus.valueOf(status.toUpperCase());
+        } catch (IllegalArgumentException e) {
+            log.error("Invalid status requested: {}", status);
+            return ResponseEntity.badRequest().build();
+        }
+
+        List<Booking> bookings = bookingRepository.findByStatus(statusEnum);
+
+        List<BookingResponse> dtos = bookings.stream()
+                .map(this::enrichAndMap)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(new GetBookingResponse(dtos));
+    }
+
+    @Transactional
+    public void cancelBooking(UUID bookingId) {
+        Booking booking = bookingRepository.findById(bookingId)
+                .orElseThrow(() -> new RuntimeException("Booking not found"));
+        booking.setStatus(BookingStatus.CANCELLED);
+        bookingRepository.save(booking);
+    }
+
+    @Transactional
+    public void archiveBooking(UUID bookingId) {
+        Booking booking = bookingRepository.findById(bookingId)
+                .orElseThrow(() -> new RuntimeException("Booking not found"));
+        // Assuming ARCHIVED exists in your Enum, otherwise use boolean flag
+        booking.setStatus(BookingStatus.ARCHIVED);
+        bookingRepository.save(booking);
+    }
+
+    /**
+     * Orchestrates the mapping and fetching of external data.
+     */
+    private BookingResponse enrichAndMap(Booking booking) {
+        String vehicleName = getVehicleNameFromExternalService(booking.getVehicleId());
+
+        String serviceNames = getServiceNamesFromExternalService(booking.getServiceIds());
+
+        return DtoMapper.mapToResponse(booking, vehicleName, serviceNames);
+    }
+
+    private String getVehicleNameFromExternalService(UUID vehicleId) {
+        if (vehicleId == null) return "Unknown Vehicle";
+        return "Vehicle " + vehicleId.toString().substring(0, 5) + "...";
+    }
+
+    private String getServiceNamesFromExternalService(List<UUID> serviceIds) {
+        if (serviceIds == null || serviceIds.isEmpty()) return "No Services";
+        return serviceIds.size() + " Service(s) Selected";
     }
 }
